--- a/giving-back.html
+++ b/giving-back.html
@@ -118,6 +118,74 @@
 
 				<hr>
 
+				<h4><small>iLEAD /iChoose program</small></h4>
+				<p>The iLEAD /iChoose program consists of 16 lessons spread out
+					over four units with the goal of helping teenagers learn leadership values
+					and teaching them how to apply them to their own lives. iChoose was
+					designed to provide students with an environment for leadership values to
+					be introduced,practiced, and shared. Because many of today’s teenagers
+					equate leadership with a position, abuse of power,bribery, and corruption,
+					few young people have a healthy correct understanding of what leadership
+					is and how they can apply it to their lives and the lives of others.</p>
+                <br>
+                <p>As a member of the John C. Maxwell team, I provide this program to help
+					reverse the negative portrayal of leadership by offering a desirable portrait
+					of leadership based on values that can be applicable to a student’s life-
+					values, that teenagers can admire,implement, and choose to aspire to for a
+					more positive and sustained style of leadership.</p>
+				<br>
+				
+				<h5>Objectives</h5>
+				<p>This program has been designed to help students accomplish five goals:</p>
+
+				<ol>
+					<li>Identify with the 16 values of leadership</li>
+					<li>Take ownership of their choices</li>
+					<li>Practice leadership values and develop those skills</li>
+					<li>Evaluate themselves with their applied knowledge</li>
+					<li>Take turns guiding small group discussions</li>
+				</ol>
+
+				<h5>Measures of Success/Outcomes</h5>
+
+				<ul>
+					<li>Increase in discussion and participation in leadership development.</li>
+					<li>Noticeably stronger relationships between group members, and an
+						increase in community strength.</li>
+					<li>Greater awareness of self,behaviors,communications style,strengths,
+						and skills.</li>
+					<li>Greater awareness of leadership activities,goals,roles, and initiatives.</li>
+				</ul>
+
+				<div class="col-sm-8" style="margin: 0 auto; text-align: center;">
+					<h2>Lessons</h2>
+					<h3><small>Unit #1</small></h3>
+					<p>Lesson 1:Choice</p>
+					<p>Lesson 2:Growth</p>
+					<p>Lesson 3:Attitude</p>
+					<p>Lesson 4:Commitment</p>
+
+					<h3><small>Unit #2</small></h3>
+					<p>Lesson 5:Relationships</p>
+					<p>Lesson 6:Character</p>
+					<p>Lesson 7:Forgiveness</p>
+					<p>LeLesson 8:Self Worth</p>
+
+					<h3><small>Unit #3</small></h3>
+					<p>Lesson 9: Responsibility</p>
+					<p>Lesson 10:Courage</p>
+					<p>Lesson 11:Initiative</p>
+					<p>Lesson 12:Priorities</p>
+
+					<h3><small>Unit #4</small></h3>
+					<p>Lesson 13: Teachability</p>
+					<p>Lesson 14:Self-Discipline</p>
+					<p>Lesson 15:Resilience</p>
+					<p>Lesson 16:Influence</p>
+				</div>
+
+				<hr>
+
 				<h4><small>Associations</small></h4>
 
 				<!-- <h2>I Love Food</h2> -->
