--- a/commercial-business.html
+++ b/commercial-business.html
@@ -150,7 +150,7 @@
 				</div>
 
 				<h4>Inventory Control and Shoplifting Prevention and Deterrence</h4>
-				<p>In a retail operation, prevention is the key to avoiding shoplifting and inventory loss. Ask us about designing a system to deter these activities ? stopping the problem in its tracks.</p>
+				<p>In a retail operation, prevention is the key to avoiding shoplifting and inventory loss. Ask us about designing a system to deter these activities and stopping the problem in its tracks.</p>
 				<hr>
 
 				<div id="callus"></div>	
