--- a/government.html
+++ b/government.html
@@ -109,52 +109,12 @@
               <p>Office</p>
               <p>Call: (661)397-5511</p>
             </div>
-            <div class="well well-lg">
-              <h4><small>Areas Within Government Security</small></h4>
-            <ul>
-              <li>
-                <a
-                  href="./solutions.html"
-                  title="Government Security Solutions"
-                  >Solutions</a
-                >
-              </li>
-              <li>
-                <a
-                  href="./contract-vehicles.html"
-                  title="Contract Vehicles"
-                  >Contract Vehicles</a
-                >
-              </li>
-              <li>
-                <a
-                  href="./school-districts.html"
-                  title="California School Districts"
-                  >School Districts</a
-                >
-              </li>
-              <li>
-                <a
-                  href="./security-safety.html"
-                  title="Security and Safety"
-                  >Security and Safety</a
-                >
-              </li>
-              <li>
-                <a
-                  href="./partners.html"
-                  title="Partners and Certifications"
-                  >Partners-Certifications</a
-                >
-              </li>
-            </ul>
-            </div>
           </div>
 
           <div class="col-sm-8">
             <h4><small>Government Security</small></h4>
 
-            <p><img class="img-resp" src="./images/teltec-gsabanner.jpg" alt="" /></p>
+            <p><a href="images\GSA Schedule - Terms and Conditions.pdf" target="_blank"><img class="img-resp" src="./images/teltec-gsabanner.jpg" alt="Terms and Conditions" /></a></p>
             <p>
               Tel-Tec Security Systems, Inc. is an independent security firm
               that provides security solutions to more than 17,500 clients.
