--- a/home-security.html
+++ b/home-security.html
@@ -115,7 +115,7 @@
 				</p>
 				<ul>
 					<li>Premium touch pads at one or two doors</li>
-					<li>Alarms all open able doors</li>
+					<li>Alarms on all openable doors</li>
 					<li>Chime feature each time a protected door is opened</li>
 					<li>Motion detector</li>
 					<li>Interior siren</li>
@@ -133,7 +133,7 @@
 					<li>Break-glass detectors</li>
 					<li>Panic buttons</li>
 					<li>Video surveillance</li>
-					<li>Alarms on all open able windows</li>
+					<li>Alarms on all openable windows</li>
 					<li>Additional touch pads</li>
 				</ul>
 				<hr>
