--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="about-us.html">About Us</a>
-                        <a class="dropdown-item" href="our-history.html">Our History</a>
+                        <!-- <a class="dropdown-item" href="our-history.html">Our History</a> -->
                         <a class="dropdown-item" href="giving-back.html">Giving Back</a>
                     </div>
                 </li>
@@ -122,7 +122,7 @@
                 <!-- Dropdown list -->
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="about-us.html">About Us</a>
-                    <a class="dropdown-item" href="our-history.html">Our History</a>
+                    <!-- <a class="dropdown-item" href="our-history.html">Our History</a> -->
                     <a class="dropdown-item" href="giving-back.html">Giving Back</a>
                 </div>
             </li>
