--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="about-us.html">About Us</a>
-							<a class="dropdown-item" href="our-history.html">Our History</a>
+							<!-- <a class="dropdown-item" href="our-history.html">Our History</a> -->
 							<a class="dropdown-item" href="giving-back.html">Giving Back</a>
 						</div>
 					</li>
@@ -171,7 +171,7 @@
 					<!-- Dropdown list -->
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="about-us.html">About Us</a>
-						<a class="dropdown-item" href="our-history.html">Our History</a>
+						<!-- <a class="dropdown-item" href="our-history.html">Our History</a> -->
 						<a class="dropdown-item" href="giving-back.html">Giving Back</a>
 					</div>
 				</li>
