--- a/government.html
+++ b/government.html
@@ -114,7 +114,7 @@
           <div class="col-sm-8">
             <h4><small>Government Security</small></h4>
 
-            <p><a href="images\GSA Schedule - Terms and Conditions.pdf" target="_blank"><img class="img-resp" src="./images/teltec-gsabanner.jpg" alt="Terms and Conditions" /></a></p>
+            <p><a href="images\GSA Schedule - Terms and Conditions_compressed (2).pdf" target="_blank"><img class="img-resp" src="./images/teltec-gsabanner.jpg" alt="Terms and Conditions" /></a></p>
             <p>
               Tel-Tec Security Systems, Inc. is an independent security firm
               that provides security solutions to more than 17,500 clients.
